# glimpse

./: Dockerfile  docker-compose.yaml  glimpse.pem  init_db.py  launch  pyproject.toml
copilot/: .workspace
copilot/environments/glimpse/: manifest.yml
copilot/glimpse/: manifest.yml
frontend/: Dockerfile  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: logo.tsx
frontend/src/components/auth/: LoginForm.tsx  LoginPage.tsx  ProtectedRoute.tsx
frontend/src/components/dashboard/: Dashboard.tsx  LeadTable.tsx  StatsCards.tsx
frontend/src/lib/: api.ts  auth-context.tsx  auth.ts  mockAuth.ts  mockData.ts
frontend/src/types/: lead.ts
src/: dataset2.csv  main.py  models.py  schemas.py
